--- a/com.jobsearch.noukri/pom.xml
+++ b/com.jobsearch.noukri/pom.xml
@@ -32,6 +32,15 @@
 		<version>1.18.28</version>
 		<scope>provided</scope>
 	</dependency>
+	
+	
+	<dependency>
+    <groupId>org.apache.logging.log4j</groupId>
+    <artifactId>log4j-slf4j-impl</artifactId>
+    <version>2.17.1</version>
+    <scope>test</scope>
+</dependency>
+
 	  
   </dependencies>
 </project>
